ISBN's, changed author contact details, Riso DTU. We need to update the changes section before release.
git-svn-id: https://svn.mccode.org/svn/McStasTeX@231 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/abstractpage_comp.tex
+++ b/trunk/abstractpage_comp.tex
@@ -12,34 +12,38 @@ The authors are:
 \begin{quote}
 \label{p:authors}
 \vskip\baselineskip\noindent
-Kim Lefmann \\
-Materials Research Department, Ris{\o} National Laboratory, DTU, Roskilde, Denmark \\
-email: \verb+kim.lefmann@risoe.dk+
-\vskip\baselineskip\noindent
 Peter Kj\ae r Willendrup \\
-Materials Research Department, Ris{\o} National Laboratory, DTU, Roskilde, Denmark \\
+Materials Research Department, Ris{\o} DTU, Roskilde, Denmark \\
 email: \verb+peter.willendrup@risoe.dk+
 \vskip\baselineskip\noindent
-Kristian Nielsen \\
-email: \verb+kristian.nielsen@mail.tele.dk+
+Erik Knudsen \\
+Materials Research Department, Ris{\o} DTU, Roskilde, Denmark \\
+email: \verb+erik.knudsen@risoe.dk+
+\vskip\baselineskip\noindent
+Kim Lefmann \\
+Niels Bohr Institute, University of Copenhagen, Denmark \\
+email: \verb+lefmann@fys.ku.dk+
+%\vskip\baselineskip\noindent
+% Kristian Nielsen \\
+% email: \verb+kristian.nielsen@mail.tele.dk+
 \vskip\baselineskip\noindent
 Emmanuel Farhi \\
 Institut Laue-Langevin, Grenoble, France \\
 email: \verb+farhi@ill.fr+
-\vskip\baselineskip\noindent
-Klaus Lieutenant \\
-Institutt for Energiteknikk, Kjeller, Norway\\
-email: \verb+Klaus.Lieutenant@ife.no+
+% \vskip\baselineskip\noindent
+% Klaus Lieutenant \\
+% Institutt for Energiteknikk, Kjeller, Norway\\
+% email: \verb+Klaus.Lieutenant@ife.no+
 \end{quote}
 %Front page illustration:\\[\baselineskip]
 %Simulated scattering from a vanadium sample
 %taking into account the secondary extinction. See
 %section~\ref{s:vanadium-result}.
 \vfill
-\noindent ISBN 978--87--550--3619--2
+\noindent ISBN 978--87--550--3680--2
 \par\noindent ISSN 0106--2840
 \par\noindent\hbox{}\hfill
-    Pitney Bowes Management Services Denmark A/S $\cdot$ Ris{\o} National Laboratory $\cdot$ \number\year
+    Information Service Department $\cdot$ Ris{\o} DTU $\cdot$ \number\year
 %    Information Service Department $\cdot$ Ris{\o} $\cdot$ \number\year
 \par
 \thispagestyle{empty}\clearpage
