--- a/trunk/datablad.tex
+++ b/trunk/datablad.tex
@@ -45,8 +45,8 @@
 
 \footnotesize\vspace{-\baselineskip}
 Available on request from:\\
-Information Service Department, Ris{\o} National Laboratory \\
-(Afdelingen for Informationsservice, Forskningscenter Ris{\o}) \\
+Information Service Department, Ris{\o} DTU \\
+(Afdelingen for Informationsservice, Ris{\o} DTU) \\
 P.O. Box 49, DK--4000 Roskilde, Denmark \\
 Phone +45 4677 4004,
 Telefax +45 4677 4013
@@ -58,8 +58,8 @@ Telefax +45 4677 4013
 \begin{datablad}
 \titel{User and Programmers Guide to the Neutron Ray-Tracing Package
  \MCS , Version \version}
-\forfatter{Peter Willendrup, Emmanuel Farhi and Kim Lefmann}
-\isbn{ISBN 978--87--550--3617--8}\issn{0106--2840}
+\forfatter{Peter Willendrup, Emmanuel Farhi, Erik Knudsen and Kim Lefmann}
+\isbn{ISBN 978--87--550--3679--6}\issn{0106--2840}
 \afdeling{Materials Research Department}
 \dato{\reldate}
 \regnummer{---}
