--- a/trunk/abstractpage.tex
+++ b/trunk/abstractpage.tex
@@ -11,14 +11,16 @@ The authors are:
 \begin{quote}
 \label{p:authors}
 Peter Kj\ae r Willendrup \verb+<peter.willendrup@risoe.dk>+ \\
-Materials Research Department, Ris{\o} National Laboratory, DTU, Roskilde, Denmark 
+Materials Research Department, Ris{\o} DTU, Roskilde, Denmark 
 
 Emmanuel Farhi \verb+<farhi@ill.fr>+ \\
 Institut Laue-Langevin, Grenoble, France 
 
-Kim Lefmann \verb+<kim.lefmann@risoe.dk>+ \\
-Materials Research Department, Ris{\o} National Laboratory, DTU, Roskilde, Denmark 
+Erik Knudsen \verb+<erik.knudsen@risoe.dk>+ \\
+Materials Research Department, Ris{\o} DTU, Roskilde, Denmark 
 
+Kim Lefmann \verb+<lefmann@fys.ku.dk>+ \\
+Niels Bohr Institute, University of Copenhagen, Denmark 
 \end{quote}
 as well as authors who left the project:
 \begin{quote}
@@ -37,10 +39,10 @@ Presently associated with: MySQL AB, Sweden
 %taking into account the secondary extinction. See
 %section~\ref{s:vanadium-result}.
 \vfill
-\noindent ISBN 978--87--550--3617--8
+\noindent ISBN 978--87--550--3679--6
 \par\noindent ISSN 0106--2840
 \par\noindent\hbox{}\hfill
-    Pitney Bowes Management Services Denmark A/S $\cdot$ Ris{\o} National Laboratory $\cdot$ \number\year
+    Information Service Department $\cdot$ Ris{\o} DTU $\cdot$ \number\year
 %    Information Service Department $\cdot$ Ris{\o} $\cdot$ \number\year
 \par
 \thispagestyle{empty}\clearpage
