--- a/trunk/datablad_comp.tex
+++ b/trunk/datablad_comp.tex
@@ -38,8 +38,8 @@
 
 \footnotesize\vspace{-\baselineskip}
 Available on request from:\\
-Information Service Department, Ris{\o} National Laboratory \\
-(Afdelingen for Informationsservice, Forskningscenter Ris{\o}) \\
+Information Service Department, Ris{\o} DTU\\
+(Afdelingen for Informationsservice, Ris{\o} DTU) \\
 P.O. Box 49, DK--4000 Roskilde, Denmark \\
 Phone +45 4677 4004,
 Telefax +45 4677 4013
@@ -51,8 +51,8 @@ Telefax +45 4677 4013
 \begin{datablad}
 \titel{Component Manual to the Neutron Ray-Tracing Package
  \MCS , Version \version}
-\forfatter{Kim Lefmann, Peter Kj\ae r Willendrup, and Emmanuel Farhi}
-\isbn{ISBN 978--87--550--3619--2}\issn{0106--2840}
+\forfatter{Peter Kj\ae r Willendrup, Erik Knudsen, Kim Lefmann and Emmanuel Farhi}
+\isbn{ISBN 978--87--550--3680--2}\issn{0106--2840}
 \afdeling{Materials Research Department}
 \dato{\reldate}
 \regnummer{---}
