--- a/trunk/risoe-rep-title.tex
+++ b/trunk/risoe-rep-title.tex
@@ -45,7 +45,7 @@
 \title{User~and~Programmers~Guide~to~\rlap{the}\\ % Avoid overfull message.
  Neutron~Ray-Tracing~Package\\
  \MCS, Version \version\ }
-\author{Peter Willendrup, Emmanuel Farhi and Kim Lefmann}
+\author{Peter Willendrup, Erik Knudsen, Emmanuel Farhi and Kim Lefmann}
 
 \maketitle
 \endgroup
