--- a/trunk/risoe-rep_comp-title.tex
+++ b/trunk/risoe-rep_comp-title.tex
@@ -45,6 +45,6 @@
 \title{Component~Manual~for~\rlap{the}\\ % Avoid overfull message.
  Neutron~Ray-Tracing~Package\\
  \MCS, Version \version\ }
-\author{Kim Lefmann, Peter Kj\ae r Willendrup and Emmanuel Farhi}
+\author{Peter Kj\ae r Willendrup, Erik Knudsen, Kim Lefmann and Emmanuel Farhi}
 \maketitle
 \endgroup
