--- a/trunk/changes.tex
+++ b/trunk/changes.tex
@@ -19,9 +19,13 @@ Of course, we can not guarantee that the software is bullet proof, but we do our
 The following changes concern the 'Kernel' (i.e. the \MCS\ meta-language and program). See the dedicated chapter in the {\it User manual} for more details.
 
 \begin{itemize}
-\item New \verb+SPLIT+ keyword, method for improvement of statistics. Can be considered equivalent to splitting
-  simulations in part by use of the \verb+Virtual_output+ and \verb+Virtual_input+ components. Please consult the
-  relevant documentation in Section \ref{s:instrdefs-extend-enhance} before using this feature!
+\item New \verb+%include INSTR+ keyword, mechanism to include one instrument in another. Useful for independent
+     build-up of e.g. primary and secondary spectrometer. Or to easily see the effect of moving an instrument
+     to a different beamport or facility. Please consult the relevant
+     documentation in Section \ref{s:instrdefs-include-instr} 
+     before using this feature!
+\item When applying the \verb+WHEN+ keyword, an applied \verb+EXTEND %{ %}+ block will only be active if the \verb+WHEN+
+     returns 'true'.
 \end{itemize}
 
 \section{Run-time}
@@ -29,11 +33,32 @@ The following changes concern the 'Kernel' (i.e. the \MCS\ meta-language and pro
 \index{Library!Run-time}
 
 \begin{itemize}
-\item The threading mechanism for parallelisation has been drastically improved with OpenMP and now compares to the MPI efficiency. This is the simplest method for 
-  parallelisation on single machines (e.g. modern dual-core processors), while MPI is best on clusters.
-  The McStas team members routinely run developer machines and clusters using MPI.
+\item Fix of a limiting case focusing problem reported to neutron-mc by George Apostolopoulos.
+      (See http://mailman.risoe.dk/pipermail/neutron-mc/2007q4/002915.html)
 \end{itemize}
 
+\section{Parallelisation}
+\label{s:new-features:parallelisation}
+\index{Library!parallelisation}
+
+\begin{itemize}
+\item Improved stability of MPI simulations by addition of an 'MPI barrier' (reduces probability of nodes beeing 'out of sync'.
+\item On Windows, an 'mpicc.bat' script has been added for easier setup of McStas with gcc and MPI (We recommend MPICH).
+\item Mac OS X 10.5 Leopard is shipped with built-in support for MPI (OpenMPI). No need to install extra packages.
+\item Use of 'virtual sources' is now supported on MPI clusters. (If running on N nodes, all neutron events will be processed
+     on each of the N nodes - implicit repetition N times of the source contents.)
+\item The threading mechanism for parallelisation has been drastically improved with OpenMP and now compares to the MPI efficiency. This is the simplest method for 
+  parallelisation on single machines (e.g. modern dual-core processors), while MPI is best on clusters.
+  The McStas team members routinely run developer machines and
+  clusters using MPI.
+\item Much improved gridding support (via ssh). Ready for heterogenous systems, e.g. mixed operating systems and hardware
+     types! (Requires -c compile flag for mcrun or equivalent setting in mcgui.) The only requirement is ssh client on the machine 
+     where the grid run is started, plus ssh daemon and c-compiler (e.g. gcc or simply cc) on the remote machines. Files in the 
+     current dir are transparently copied back and forth, causes a substantial network traffic in some cases. Output data from the 
+     nodes are automatically merged using mcformat. Just as efficient as MPI without any library dependencies at all. Make use 
+     of all processer cores in your machine, simply choose to 'grid'. Windows 'client' host OK, we autodetect ssh and scp binaries
+     from the Putty package.
+\end{itemize}
 
 \section{Components and Library}
 \label{s:new-features:components}
@@ -41,27 +66,42 @@ The following changes concern the 'Kernel' (i.e. the \MCS\ meta-language and pro
 We here list the new and updated components (found in the \MCS\ \verb+lib+ directory)
 which are detailed in the {\it Component manual}, also mentioned in
 the {\it Component Overview} of the {\it User Manual}.
+\subsection{General}
+\begin{itemize}
+\item When using the Virtual\_input type components, \-\-ncount is always set to an integer multiplum 
+     (repeat\_count) of the number of events in the file. See also
+     related remark about MPI below.
+\item Most monitors now allow to 'not propagate' the neutron, i.e. not influence the beam. Parameter name
+     is '\verb+restore_neutron+'. For \verb+Monitor_nD.comp+ the equivalent
+     parameter is named 'parallel'.
+\end{itemize}
 \subsection{New components}
 \begin{itemize}
-\item \verb+Tunneling_sample.comp+ Double-cylinder shaped all-incoherent scatterer with elastic, quasielastic (Lorentzian)
-  and tunneling (sharp) components. No multiple scattering. Absorbtion included. By Kim Lefmann
-\item \verb+TOF2E_monitor.comp+ TOF-sensitive monitor, converting to energy. By Kim Lefmann
+\item \verb+MirrorElli.comp+, elliptical mirror. Contributed by Sylvain Desert, LLB.
+\item \verb+MirrorPara.comp+, parabolic mirror. Contributed by Sylvain Desert, LLB.
 \end{itemize}
 \subsection{Updated components}
 \begin{itemize}
-\item \verb+Source_adapt.comp+, additions by Aaron Percival which allows to specify a flat wavlength distibution.
-\item \verb+Single_crystal.comp+, warning NOT to use this component as a monochromator (bug fix/validation under way).
-\item \verb+Powder_N.comp+, can now be used in concentric mode, i.e. for modelling sample surroundings (cryostat, container..).
-\item Various minor updates to other components, including \verb+Monochromator_curved.comp+ and \verb+Progress_bar.comp+
+\item \verb+Single_crystal.comp+ validation still ongoing, but has progressed: The algorithm seems OK, but is to some
+     extent not in sync with the documentation. New option to specify reciprocal space vectors directly.
+     (before only real space definitions were possible)
 \end{itemize}
 \subsection{New example instruments}
 \begin{itemize}
-  \item \verb+ILL_H15_IN6+ by Emmanuel Farhi
-  \item \verb+ILL_H142_IN12+ by Emmanuel Farhi
-  \item \verb+Histogrammer.instr+ by Peter Willendrup - see the 'Tools' section
-  \item \verb+ESS_IN5_reprate.instr+ Instrument for simulating IN5-TYPE (cold chopper) multi-frame spectrometer at ESS LPT.
-    (example instrument for \verb+Tunneling_sample.comp+.) By  Kim Lefmann
+\item \verb+ILL_H25_IN22_sample.instr+ (CRG instrument @ ILL) by E. Farhi / P. Willendrup
+\item \verb+ILL_H25_IN22_resolution.instr+ (CRG instrument @ ILL) by E. Farhi / P. Willendrup
+\item \verb+Incoherent_Test.instr+, instrument to compare incoherent scattering from the different sample comps
+     (V\_samle, PowderN, Single\_crystal, Isotropic\_sqw). More instruments of this type planned (compare
+     guides etc.), by P. Willendrup / E. Knudsen / A. Daoud-Aladine (ISIS)
+\item \verb+FocalisationMirrors.instr+,  test instrument for
+  MirrorElli and MirrorPara, by  Sylvain Desert, LLB
+\item \verb+PSI_DMC.instr+, Powder Diffractometer at PSI, by L. Keller / U. Filges / P. Willendrup
 \end{itemize}
+\subsection{Datafiles}
+\begin{itemize}
+\item 'Bugfix', some of the provided .laz files did not have proper unit for |F2|.
+\end{itemize}
+
 \section{Documentation}
 \label{s:new-features:documentation}
 \begin{itemize}
@@ -74,51 +114,46 @@ the {\it Component Overview} of the {\it User Manual}.
 \label{s:new-features:tools}
 \index{Tools}
 \index{Installing}
-\subsection{New tools}
+\subsection{New tool features}
 \begin{itemize}
-  \item New mcdaemon for visualisation of intermediate simulation results (obtained by sending USR2 signal to a 
-    running simulation or by using the \verb+Progress_bar+ component with \verb+flag_save=1+).
-  \item Improvements to mcgui:
-    \begin{itemize}
-      \item New tool menu with hooks to mcformat, mcdaemon and mcplot
-      \item Possibility for auto-setup of MPI ssh keys
-      \item Possibility to run the McStas editor in 'detached' mode, hence available whilst a simulation is running
-      \item Histogrammer.instr: Special histogramming instrument for visualisation of virtual source files (\verb+Virtual_input+,
-	VitESS, MCNP and Tripoli formats)
-    \end{itemize}
-  \item PGPLOT output format (original McStas format) is now possible on Windows. A pgplot/pgperl installation
-    is included in a standard McStas Win32 installation.
-  \item  NeXus output format possible. To use this feature, HDF and NeXus libraries must be available
-    and functional on your system before installing McStas from source. (In case of a binary package, 
-    you MUST recompile the McStas software.) To enable a McStas build with NeXus, run 
-    \verb+./configure --with-nexus.+
+  \item Support for per-user mcstas\_config.perl file, located in \verb+$HOME/.mcstas/+ . This folder is also the default
+     location of the 'host list' for use with MPI or gridding, simply name the file 'hosts'.
+  \item mcgui Save Configuration for saving chosen settings on the 'Configuration options' and 'Run dialogue'.
+  \item Possibilty to run MPI or grid simulations by default from mcgui.
+  \item When scanning parameters, mcrun now terminates with a relevant error message if one or more scan steps
+     failed (intensities explicitly set to 0 in those cases).
+  \item When running parameter optimisations, a logfile (default name is "mcoptim\_XXXX.dat" where XXXX is a
+     pseudo-random string) is created during the optimisation, updated at each optim step.
+  \item We now provide syntax-highlighting setup files for vim and gedit editors.
+  \item Rudimentary support for GNUPLOT when plotting with mcplot. Data file format is standard McStas/PGPLOT.
 \end{itemize}
-\subsection{Installation}
-\begin{itemize} 
-\item Mac OS X is now considered a supported platform. For now, no actuall installer program
-  is given, but all needed software has been packed together with easy to follow instructions.
-  Test of the instructions have been performed on Mac OS X 10.4 Tiger on both Intel and PPC
-  hardware.
-\item McStas now comes in a Debian binary package (\verb+.deb+), tested to work on Debian and Ubuntu systems. The debian
-    package provides McStas, pgplot and pgperl and have dependencies for the perl, perl-tk, gcc, libg2c0, pdl and libc6-dev 
-    packages.See \verb+http://www.mcstas.org+ or  Chapter \ref{installing} for details.
-\item As also mentioned in the list of new tools, PGPLOT output is available on Windows with a default \MCS\ installation.
-\item  Intel C compiler - The documentation now includes instructions to run McStas with the Intel C compiler (available on Windows,
-    Linux x86 and Mac OS x86 systems). Typically, a performance gain of 2 is found relative to gcc -O2. Relevant
-    compiler flags are:
-    \begin{itemize}
-      \item \verb+MCSTAS_CFLAGS="-g -O2 -wd177,266,1011,181"+
-    \end{itemize}
-\item To run McStas with MPI and the Intel C compiler, you may have to edit your mpicc shell script to set \verb+CC="icc"+
+\subsection{Platform support}
+\begin{itemize}
+\item Mac OS X 10.3 Panther (ppc), 10.4 Tiger (pcc/intel), 10.5 Leopard (ppc/intel)
+\item Windows XP,  Windows Vista (Now with a recent perl version; 5.10 plus various fixes). New feature on Windows:
+     Simulations \emph{always} run in the background, freeing mcgui for other work.
+\item "Any" Linux - reference platforms are Ubuntu 8.04 (and earlier) and Debian 4.0 (and earlier). We have also tested 
+  Fedora 8, OpenSuSE 10.3 and CentOS 4 releases recently.
+\item FreeBSD (FreeBSD release 6.3 and its cousin DesktopBSD 1.6 recently tested)
+\item SUN Solaris 10 (Intel tested, Sparc probably OK)
+\item Plus probably any UNIX/POSIX type environment with a bit of effort...
 \end{itemize}
 Details about the installation and the available tools are given in chapter \ref{installing}.
+
+\subsection{Various}
+\begin{itemize}
+\item  A number of minor bugs ironed out, both in components, runtime code and tools.
+\item From release 1.12, McStas is GPL 2 only. The debate on the internet about the future GPL 3 license suggests that this license 
+     might have implications on the 'derived work', hence have implications on what and how our users use their McStas simulations
+     for. To protect user freedom, we will stick with GPL 2.     
+\end{itemize}
 
 \subsection{Warnings}
 {\bf WARNING:} The 'dash' shell which is used as /bin/sh on some Linux system (Including Ubuntu 7.04) makes the 'Cancel' and 'Update' 
 buttons fail in mcgui. Solutions are:
 \begin{itemize}
-\item[a)] If your system is a Debian or Ubuntu, please install our Debian package which requests automatic removal of 'dash'.
-\item[b)] If your /bin/sh is dash, please install bash and manually change the /bin/sh link to point at bash.
+\item[a)] If your system is a Debian or Ubuntu, please dpkg-reconfigure dash and say 'no' to install dash as /bin/sh
+\item[b)] If you run another Linux with /bin/sh beeing dash, please install bash and manually change the /bin/sh link to point at bash.
 \end{itemize}
 
 \section{Future extensions}
@@ -129,10 +164,7 @@ The following features are planned for the oncoming releases of \MCS\
 \item Increased validation and testing.
 \item Extend test cases to all (most) components. One instrument
   pr. component. (Probably not in \verb+examples/+.
-\item Better support for heterogeneous grid computing.
 \item Updates to mcresplot to support the Matlab and Scilab backends.
-\item Compatibility issues with recent Perl releases on Windows.
-\item Compatibility issues with the next release of Scilab.
 \item Global changes of components relating to polarisation
   visualisation.
 \item Visualisation of neutron spins in magnetic fields for all
@@ -143,7 +175,7 @@ The following features are planned for the oncoming releases of \MCS\
 \item Gui support for array AT specifiers.
 \item More complete polarisation support including numerically defined
   magnetic fields and advanced sample components.
-\item Perl plotting alternative to PGPLOT.
+\item Perl or python plotting alternative to PGPLOT.
 \item Larger variety of sample components.
 \end{itemize}
 
