--- a/trunk/preface.tex
+++ b/trunk/preface.tex
@@ -51,14 +51,9 @@ If you {\bf appreciate} this software, please subscribe to the \verb+neutron-mc@
 Several people outside the core developer team have been contributing
 to \MCS\ \version:
 \begin{itemize}
-\item Thorwald van Vuure, ILL contributed his \verb+PSD_Detector.comp+
-  component, a physical detector model.
-\item Chama Hennae, ENSIMAG worked with Emmanuel Farhi on the new
-  \verb+Virtual_mcnp_input.comp+ and \verb+Virtual_mcnp_output.comp+
-  for handeling MCNP event files.
-\item Ludovic Giller and Uwe Filges, PSI contributed
-  \verb+Source_multi_surfaces.comp+, a source component with multiple
-  surface areas with individual spectrums.
+\item Mirror\_Elli.comp, Mirror\_para.comp,
+  Focalisation\_mirrors.instr (Sylvain Desert, LLB)
+\item PSI\_DMC.instr (L. Keller and U. Filges PSI / P. Willendrup, Ris\o\ DTU)
 \end{itemize}
 Thank you guys! This is what \MCS\ is all about!
 
