--- a/trunk/res_sample.tex
+++ b/trunk/res_sample.tex
@@ -2,7 +2,7 @@
 \label{s:res_sample}
 \index{Samples!Resolution function, sample for}
 
-\component{Res\_sample}{(System); Alan Tennant, HMI}{$r_{\rm i}$, $r_{\rm o}$, $h$, $r_{\rm focus}$, $x_{\rm target}$, $y_{\rm target}$, $z_{\rm target}$, $E_0$, $\Delta E$ }{$x_w$, $y_h$, $z_t$, $x_{\rm focus}$, $y_{\rm focus}$, $a_{\rm v, focus}$, $a_{\rm h, focus}$, target index}{}
+\component{Res\_sample}{(System); Alan Tennant, HMI}{$r$, $r$, $h$, $r_{\rm focus}$, $x_{\rm target}$, $y_{\rm target}$, $z_{\rm target}$, $E_0$, $\Delta E$ }{$x_w$, $y_h$, $z_d$, $x_{\rm focus}$, $y_{\rm focus}$, $a_{\rm v, focus}$, $a_{\rm h, focus}$, target index}{}
 
 The component \textbf{Res\_sample} scatters neutron rays isotropically
 in direction and uniformly in energy.
@@ -20,10 +20,10 @@ section~\ref{s:res_monitor}.
 The shape of {\rm Res\_sample} is either a hollow cylinder
 or a rectangular box.
 The hollow cylinder shape is
-specified with the inner and outer radius, $r_{\rm i}$ and $r_{\rm o}$,
+specified with the outer radius, $r$ and thickness,
 respectively, and the height, $h$.
 If these parameters are unspecified,
-the shape is instead a box of dimensions $x_w$, $y_h$, and $z_t$.
+the shape is instead a box of dimensions $x_w$, $y_h$, and $z_d$.
 %
 %\begin{figure}[htbp]
 %  \begin{center}
@@ -57,7 +57,7 @@ the interval $[E_0-\Delta E; E_0+\Delta E]$ which hence must be
 chosen large enough to cover all interesting neutron energies.
 Similarly, the scattered
 direction is chosen in a user-specified range,
-either within a sphere of radius $r_{\rm foc}$, within a rectangular
+either within a sphere of radius $r_{\rm focus}$, within a rectangular
 target with measures $(x_{\rm focus}, y_{\rm focus})$
 or in the specified angular range. This target is positioned at the $x_{target}$, $y_{target}$, $z_{target}$ point in space, or using the target\_index for which e.g. 1 is the further component, -1 is the previous, etc...
 
