--- a/trunk/Monitor_nD.tex
+++ b/trunk/Monitor_nD.tex
@@ -2,7 +2,7 @@
 \label{s:monitornd}
 \index{Monitors!The All-in-One monitor (Monitor\_nD)}
 
-\component{Monitor\_nD}{System, E. Farhi}{$x_{\rm min}$, $x_{\rm max}$, $y_{\rm min}$, $y_{\rm max}$, options}{$file$, $x_{width}, y_{height}, z_{thick}$, $bins$, $min$, $max$}{}
+\component{Monitor\_nD}{System, E. Farhi}{$x_{\rm min}$, $x_{\rm max}$, $y_{\rm min}$, $y_{\rm max}$, options}{$file$, $x_{width}, y_{height}, z_{depth}$, $bins$, $min$, $max$}{}
 
 The component {\bf Monitor\_nD} is a general Monitor that may output any
 set of physical parameters regarding the passing neutrons. The
@@ -14,7 +14,7 @@ physical parameters for each neutron.
 The input parameters for {\bf Monitor\_nD} are its dimensions $x_{\rm
   min}, x_{\rm max}, y_{\rm min}$, $y_{\rm max}$ (in meters) and an {\it
   options} string describing what to detect, and what to do with the
-signals, in clear language. The $x_{width}, y_{height}, z_{thick}$ may also be used to enter dimensions.
+signals, in clear language. The $x_{width}, y_{height}, z_{depth}$ may also be used to enter dimensions.
 
 Eventhough the possibilities of Monitor\_nD are numerous, its usage remains as simple as possible, specially in the \verb+options+ parameter, which 'understands' normal language.
 The formatting of the {\it options}
@@ -32,7 +32,7 @@ The monitor shape can be selected among seven geometries:
 \item{({\it square}) The default geometry is flat rectangular in ($xy$)
     plane with dimensions $x_{\rm min}, x_{\rm max}, y_{\rm min}$,
     $y_{\rm max}$, or $x_{width}, y_{height}$.}
-\item{({\it box}) A rectangular box with dimensions $x_{width}, y_{height}, z_{thick}$.}
+\item{({\it box}) A rectangular box with dimensions $x_{width}, y_{height}, z_{depth}$.}
 \item{({\it disk}) When choosing this geometry, the detector is a flat
     disk in ($xy$) plane. The radius is then
     \begin{equation}
