modified few things to sync with mcstas dist (e.g. vanadium_example changed) a carefull reading will be required to update parameter naming, example instruments, contrib -> optics, etc...
git-svn-id: https://svn.mccode.org/svn/McStasTeX@239 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/kernel.tex
+++ b/trunk/kernel.tex
@@ -208,7 +208,7 @@ components, along with their position and parameters, which together
 make up an instrument. Each component is given its own local coordinate
 system, the position and orientation of which may be specified by its
 translation and rotation relative to another component. An example is
-given in section~\ref{s:vanadium_example.instr} and some additional
+given in section~\ref{s:Samples_vanadium.instr} and some additional
 examples of instrument definitions can be found on the McStas
 web-page~\cite{mcstas_webpage} and in the \texttt{example} directory.
 
@@ -464,10 +464,10 @@ The end of the instrument definition must be explicitly marked using the keyword
 \end{quote}
 
 \subsection{Code for the instrument \texttt{vanadium\_example.instr}}
-\label{s:vanadium_example.instr}
+\label{s:Samples_vanadium.instr}
 A commented instrument definition taken from the \texttt{examples} directory is
 here shown as an example of the use of \MCS .
- \smallverbatimfile{../mcstas/lib/examples/vanadium_example.instr}
+ \smallverbatimfile{../mcstas/lib/examples/Samples_vanadium.instr}
 
 
 
