fix doc for FermiChopper. Added MPI plot up to 1024 cpu
git-svn-id: https://svn.mccode.org/svn/McStasTeX@245 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/preface.tex
+++ b/trunk/preface.tex
@@ -64,6 +64,11 @@ Third party software included in \MCS\ are:
 \item scilab Plotlib from St\'ephane Mottelet \verb+mottelet@utc.fr+.
 \item and optionally PGPLOT from Tim Pearson \verb+tjp@astro.caltech.edu+.
 \end{itemize}
+and special thanks to the following \MCS\ contributors:
+\begin{itemize}
+\item Christophe Taton from ENSIMAG/Grenoble for the MPI support
+\item Reynald Arnerin from Universite J. Fourrier, Grenoble for the complex geometry support in samples
+\end{itemize} 
 
 The \MCS\ project has been supported by the European Union, initially
 through the XENNI program and the RTD ``Cool Neutrons'' program in FP4,
