--- a/trunk/FermiChopper.tex
+++ b/trunk/FermiChopper.tex
@@ -21,11 +21,11 @@
 The Fermi chopper is a rotating vertical cylinder containing a set of collimating slits (\emph{slit package}). Main geometry parameters are the radius $R$, minimum and maximum height $y_{min}$ and $y_{max}$ (see Fig. \ref{fig:Overview.eps}).
 In this implementation, the slits are by default straight, but may be coated with super-mirror, and curved. Main parameters for the slits are the number of slits $Nslit$, the length $length$ and width $w$ of each slit, the width of the separating Cd-blades is neglected. The slit walls reflectivity is modelled just like in guide components by the $m$-value ($m > 1$ for super mirrors), the critical scattering vector $Q_c$, the slope of reflectivity $\alpha$, the low-angle reflectivity $R_0$ and the width of supermirror cut-off $W$. For $m=0$ the blades are completly absorbing. The AT position of the component is its center.
 
-The angular speed of the chopper is $\omega = 2\pi \nu$, where $\nu$ is the rotation frequency. The angle $phase$ for which the chopper is in the 'open' state for most of the neutrons coming in (z' axis of the rotating frame parallel to the z axis of the static frame) is also an input parameter. The time window may optionally be shifted to zero when setting the \verb+zero_time=1+ option. A phase guess vaue may be set automatically using the \verb+zero_time=2+ option.
+The angular speed of the chopper is $\omega = 2\pi \nu$, where $\nu$ is the rotation frequency. The angle $phase$ for which the chopper is in the 'open' state for most of the neutrons coming in (z' axis of the rotating frame parallel to the z axis of the static frame) is also an input parameter. The time window may optionally be shifted to zero when setting the \verb+zero_time=1+ option. A phase guess value may be set automatically using the \verb+zero_time=2+ option.
 
 The curvature of the slit channels is specified with the {\it curvature} parameter. Positive sign indicates that the deviation 'bump' due to curvature is in the $x'$ positive side, and the center of curvature is in the $x'$ negative side. The optimal radius of curvature $R$ is related to frequency $\nu$ and neutron velocity $v$ with: $v=4 \pi R \nu$.
 
-The component was validated extensivelly by K. Lieutenant. As an alternative, one may use the {\bf Vitess\_ChopperFermi} component (eventhough slower and without super-mirror support) or the {\bf FermiChopper\_ILL} contributed component. The Guide\_gravity componnt has also a rotating mode, using an approximation of a Fermi Chopper.
+The component was validated extensivelly by K. Lieutenant. As an alternative, one may use the {\bf Vitess\_ChopperFermi} component (eventhough slower and without super-mirror support) or the {\bf FermiChopper\_ILL} contributed component. The Guide\_gravity component has also a rotating mode, using an approximation of a Fermi Chopper.
 
 \begin{table}
   \begin{center}
@@ -65,13 +65,13 @@ As can be seen in figure \ref{fig:Overview.eps}, neutrons first propagate onto t
 
 The rotation of the chopper is characterized by the angle $\delta$ between the rotating z' and the static z-axis. $\delta(t)$ is defined by:
 
-$$\delta(t) = \widehat{z,z'} = \omega.(t-t_0)$$
+$$\delta(t) = \widehat{z,z'} = \omega.(t-t_0) = \omega.t+\phi_0$$
 
-where $t$ is the absolute time. The chopper should better be \emph{time focussing}: slow neutrons should pass before the fast ones, so that they finally hit the detectors at the same time. Therefore the signs of $\omega$ and $\delta$ are very important: For $t>t_0$, $\delta$ is positive and points anti-clockwise.
+where $t$ is the absolute time, $t_0$ is the chopper delay, and $\phi_0$ is the chopper phase. The chopper should better be \emph{time focussing}: slow neutrons should pass before the fast ones, so that they finally hit the detectors at the same time. Therefore the signs of $\omega$ and $\delta$ are very important: For $t>t_0$, $\delta$ is positive and points anti-clockwise.
 
-Since the rotation is applied along the y - axis, we can simplify the problem to two dimensions. The orthogonal transformation matrix $T$ from the static $(xz)$ to the rotating frame $(x'z')$ is:
+Since the rotation is applied along the y - axis, we can simplify the problem to two dimensions. The orthogonal transformation matrix $T$ from the static $(zx)$ to the rotating frame $(z'x')$ is:
 \begin{equation}
-T_{xz \rightarrow x'z'} = \left(
+T_{zx \rightarrow z'x'} = \left(
 \begin{array}{cc}
 \cos(\delta) & \sin (\delta) \\
 -\sin(\delta) & \cos(\delta)
@@ -91,22 +91,22 @@ T_{xz \rightarrow x'z'} = \left(
 \label{fig:Component.eps}
 \end{figure}
 
-Together with the equation for a non-accelerated, linear propagation $\vec{r} = \vec{r_0}+\vec{v}t$ the orthogonal transformation produces a curve in the X'-Z'-plane known as \emph{archidemic spiral}, as can be seen in figure \ref{fig:Component.eps}. The two vector components $s(t) = (x',z')$ follow the equation:
+Together with the equation for a non-accelerated, linear propagation $\vec{r} = \vec{r_0}+\vec{v}t$ the orthogonal transformation produces a curve in the Z'-X'-plane known as \emph{archidemic spiral}, as can be seen in figure \ref{fig:Component.eps}. The two vector components $s(t) = (z',x')$ follow the equation:
 \begin{equation}
 s(t) = \left(
 \begin{array}{c}
-x' \\
-z'
+z' \\
+x'
 \end{array}
 \right) = T.\left(
 \begin{array}{c}
-x(t) \\
-z(t)
+z(t) \\
+x(t)
 \end{array}
 \right) = \left(
 \begin{array}{c}
-(x_0+v_x.t)cos(\delta(t)) + (z_0+v_z.t)sin(\delta(t)) \\
--(x_0+v_x.t)sin(\delta(t)) + (z_0+v_z.t)cos(\delta(t))
+(z_0+v_z.t)cos(\delta(t)) + (x_0+v_x.t)sin(\delta(t)) \\
+-(z_0+v_z.t)sin(\delta(t)) + (x_0+v_x.t)cos(\delta(t))
 \end{array}
 \right).
 \label{eq:Txz}
@@ -140,8 +140,7 @@ The neutrons are first propagated to the outer chopper cylinder and their coordi
 
 Differentiating Eq. (\ref{eq:Txz}) for $x$ coordinate
 \begin{equation}
-\dot{x'}(t) = v_x'(t) = [v_x+\omega.(z+v_z(t))]\cos(\omega(t-t_0))
-+ [v_z-\omega.(x+v_x(t))]\sin(\omega(t-t_0))
+\dot{x'}(t) = v_x'(t) = [v_x-\omega.(z+v_z.t)]\cos(\omega(t-t_0)) - [v_z+\omega.(x+v_x.t)]\sin(\omega(t-t_0))
 \end{equation}
 we may estimate the tangents to the spiral neutron trajectory in the rotating frame at times $t_1$ and $t_2$. The intersection of these two lines gives an intermediate time $t_3$.
 
@@ -151,7 +150,7 @@ If the neutron changes of slit channel at this point, we may determine the inter
 
 \subsubsection{The reflections (super-mirror slits)}
 
-If slit walls are reflecting, neutron is first propagated to the slit separating surface. Then the velocity in the rotating frame is computed using Eq. (\ref{eq:Txz}). Perpendicular velocity $v_x'$ is reverted for reflection, and inverse $T$ transformation is performed. Reflected intensity is computed the same way as for the guide component (see section \ref{s:mirror}). The remaining time $t_2$ to the slit output is estimated and the tangent intersection process is iterated, until neutron exits. Remember that super mirror $m < 1$ parameters behave like $m=1$ materials (see section \ref{ss:mirrorreflect}).
+If slit walls are reflecting, neutron is first propagated to the slit separating surface. Then the velocity in the rotating frame is computed using Eq. (\ref{eq:Txz}). Perpendicular velocity $v_x'$ is reverted for reflection, and inverse $T$ transformation is performed. Reflected intensity is computed the same way as for the guide component (see section \ref{s:mirror}). The remaining time $t_2$ to the slit output is estimated and the tangent intersection process is iterated, until neutron exits. Remember that super mirror $m < 1$ parameters behave like $m=1$ materials (see section \ref{ss:mirrorreflect}). Selecting $m=0$ sets the blabes absorbing.
 
 The propagation is finalized when determining the intersection of the neutron trajectory with the outer surface of the chopper cylinder. The neutron must then pass its aperture, else it is absorbed.
 
@@ -159,12 +158,13 @@ The propagation is finalized when determining the intersection of the neutron tr
 
 The effect of curvature can significantly improve the flux and energy resolution shape.
 
-As all $(xz)$ cordinates are transformed into $(x'z')$, the most efficient way to take into account the curvature is to include it in the transformation Eq. (\ref{eq:Txz}) by 'morphing' the curved rotating real space to a straight still frame. We use parabolic curvature for slits. Then instead of solving
+As all $(zx)$ cordinates are transformed into $(z'x')$, the most efficient way to take into account the curvature is to include it in the transformation Eq. (\ref{eq:Txz}) by 'morphing' the curved rotating real space to a straight still frame. We use parabolic curvature for slits. Then instead of solving
 \begin{equation}x'(t) = d - \Delta_{x'}(z') {\rm\ where\ } \Delta_{x'}(z')=R_{slit}.(1-\sqrt{1-(z'/R_{slit})^2})
 \end{equation}
 with $\Delta$ being the gap between the straight tangent line at the slit center and the real slit shape, we perform the additional transformation
 \begin{equation}
 x' \rightarrow x' + \Delta_{x'}(z')
 \end{equation}
-The additional transformation counter-balance the real curvature so that the rest of the algorithm is written as if slits were straight.
+The additional transformation counter-balances the real curvature so that the rest of the algorithm is written as if slits were straight.
 This applies to all computations in the rotating frame, and thus as well to reflections on super mirror coatings.
+
