Again, file moved...
git-svn-id: https://svn.mccode.org/svn/McStasTeX@248 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/kernel.tex
+++ b/trunk/kernel.tex
@@ -1299,7 +1299,7 @@ This marks the end of the component definition.
 \label{s:slit}
 A simple example of the component \texttt{Slit} is given.
 
-\smallverbatimfile{../mcstas/lib/optics/Slit.comp}
+\smallverbatimfile{../mcstas/nlib/optics/Slit.comp}
 
 
 \section{Extending component definitions}
