--- a/trunk/kernel.tex
+++ b/trunk/kernel.tex
@@ -467,7 +467,7 @@ The end of the instrument definition must be explicitly marked using the keyword
 \label{s:Samples_vanadium.instr}
 A commented instrument definition taken from the \texttt{examples} directory is
 here shown as an example of the use of \MCS .
- \smallverbatimfile{../mcstas/nlib/examples/Samples_vanadium.instr}
+ \smallverbatimfile{../../McCode/trunk/nlib/examples/Samples_vanadium.instr}
 
 
 
@@ -1299,7 +1299,7 @@ This marks the end of the component definition.
 \label{s:slit}
 A simple example of the component \texttt{Slit} is given.
 
-\smallverbatimfile{../mcstas/nlib/optics/Slit.comp}
+\smallverbatimfile{../../McCode/trunk/nlib/optics/Slit.comp}
 
 
 \section{Extending component definitions}
